Improve CharacterBody2D behavior
- CharacterBody2D properly have velocity transfer on moving platform.
- Make some field in CharacterBody2D public for easier access.
- Make Controller2D physic logic mode to apply movement during physic frame.
- Add various documents.